# asctec_drivers

./: .gitignore  README  stack.xml
asctec_autopilot/: .gitignore  CMakeLists.txt  autopilot_nodelet.xml  mainpage.dox  manifest.xml  package.xml
asctec_autopilot/include/asctec_autopilot/: autopilot.h  autopilot_nodelet.h  crc16.h  serialinterface.h  telemetry.h  waypointcontroller.h
asctec_autopilot/launch/: log_sensors.launch  test.launch  waypoint.launch
asctec_autopilot/src/: autopilot.cpp  autopilot_node.cpp  autopilot_nodelet.cpp  crc16.cpp  serial_interface.cpp  tags  telemetry.cpp  waypointcontroller.cpp  waypointcontroller_node.cpp
asctec_description/: CMakeLists.txt  package.xml
asctec_description/launch/: view_model.rviz  view_pelican.launch
asctec_description/meshes/: pelican.stl
asctec_description/urdf/: materials.urdf  pelican.urdf.xacro
asctec_drivers/: CMakeLists.txt  package.xml
asctec_mon/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
asctec_mon/launch/: monitor.launch
asctec_mon/nodes/: monitor.py
asctec_msgs/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
asctec_msgs/include/asctec_msgs/: common.h
asctec_msgs/msg/: .gitignore  ControllerOutput.msg  CtrlInput.msg  CurrentWay.msg  GPSData.msg  GPSDataAdvanced.msg  IMUCalcData.msg  IMURawData.msg  LLStatus.msg  RCData.msg  Waypoint.msg
asctec_msgs/src/: .gitignore
asctec_proc/: CMakeLists.txt  asctec_proc_nodelet.xml  mainpage.dox  manifest.xml  package.xml
asctec_proc/include/asctec_proc/: asctec_proc.h  asctec_proc_nodelet.h
asctec_proc/launch/: asctec_driver.launch  asctec_driver_nodelets.launch
asctec_proc/src/: asctec_proc.cpp  asctec_proc_node.cpp  asctec_proc_nodelet.cpp
ccny_asctec_firmware/: .cproject  .project  main.hex  main.lss  main.map  makefile  manifest.xml  package.xml
ccny_asctec_firmware/.dep/: LL_HL_comm.o.d  LPC2k_ee.o.d  adc.o.d  comm_util.o.d  comm_util_LL.o.d  gpsmath.o.d  hardware.o.d  i2c.o.d  interrupt_utils.o.d  irq.o.d  kalman.o.d  main.o.d  matrices.o.d  pid.o.d  sdk.o.d  ssp.o.d  syscalls.o.d  system.o.d  uart.o.d  uart1.o.d  util.o.d
ccny_asctec_firmware/include/ccny_asctec_firmware/: comm_util_LL.h  gpsmath.h  hardware.h  kalman.h  main.h  matrices.h  matrices2.h  pid.h  sdk.h  ssp.h  types.h  uart.h  util.h
ccny_asctec_firmware/src/: LL_HL_comm.c  comm_util_LL.c  hardware.c  kalman.c  main.c  matrices.c  pid.c  sdk.c  uart.c  util.c
ccny_asctec_firmware_2/: .cproject  .project  main.elf  main.hex  main.lss  main.map  makefile  manifest.xml  package.xml
ccny_asctec_firmware_2/.dep/: LL_HL_comm.o.d  LPC2k_ee.o.d  adc.o.d  comm_util.o.d  comm_util_LL.o.d  gpsmath.o.d  hardware.o.d  i2c.o.d  interrupt_utils.o.d  irq.o.d  kalman.o.d  main.o.d  matrices.o.d  pid.o.d  sdk.o.d  ssp.o.d  syscalls.o.d  system.o.d  uart.o.d  uart1.o.d  util.o.d
ccny_asctec_firmware_2/include/ccny_asctec_firmware/: LL_HL_comm.h  LPC2k_ee.h  adc.h  buzzer.h  comm_util_LL.h  declination.h  gpsmath.h  hardware.h  i2c.h  kalman.h  lpcUART.h  main.h  matrices.h  matrices2.h  pid.h  sdk.h  ssp.h  system.h  uart.h  uart1.h  util.h
ccny_asctec_firmware_2/src/: LL_HL_comm.c  LPC2k_ee.c  adc.c  buzzer.c  comm_util_LL.c  gpsmath.c  hardware.c  i2c.c  kalman.c  main.c  matrices.c  pid.c  sdk.c  ssp.c  syscalls.c  system.c  uart.c  uart1.c  util.c
pelican_urdf/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pelican_urdf/data/: city_flyer.xml  city_flyer_rgbd.xml  hokuyo_utm30lx.stl  pelican.ply  pelican.stl.old  pelican.xml  pelican_tango.xml
pelican_urdf/launch/: city_flyer.launch  pelican.launch
