<?xml version="1.0"?>
<package format="2">
    <name>asctec_mon</name>
    <version>0.1.0</version>
    <description>AscTec AutoPilot Console Monitor. This is a curses based groundstation.</description>
    <maintainer email="todo@todo.todo">William Morris</maintainer>
    <license>GPL</license>
    <url>http://ros.org/wiki/asctec_mon</url>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>asctec_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>asctec_msgs</exec_depend>
</package>
