<?xml version="1.0"?>
<package format="2">
    <name>asctec_msgs</name>
    <version>0.1.0</version>
    <description>Common messages for the AscTec AutoPilot</description>
    <maintainer email="todo@todo.todo">William Morris</maintainer>
    <maintainer email="todo@todo.todo">Ivan Dryanovski</maintainer>
    <maintainer email="todo@todo.todo">Steven Bellens</maintainer>
    <maintainer email="todo@todo.todo">Patrick Bouffard</maintainer>
    <license>GPL</license>
    <url>http://ros.org/wiki/asctec_msgs</url>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
</package>
